--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -11,7 +11,7 @@
 
 	
 
-		<h:outputText class="text" value="&copy; 2016 ProxiBanque. Clement et Pierre"/>
+		<h:outputText class="text" value="&copy; 2016 ProxiBanque. Kat, Clement et Pierre"/>
 
 	
 
