--- a/src/main/webapp/template/nav.xhtml
+++ b/src/main/webapp/template/nav.xhtml
@@ -13,34 +13,31 @@
 		<p:growl autoUpdate="true" />
 
 		<p:panelMenu>
-			<p:submenu label="Service Client">
-				<p:menuitem value="Liste de Clients " action="listClients"
+			<p:submenu label="Client">
+				<p:menuitem value="Liste Clients" action="listClients"
 					icon="fa fa-group fa-fw" />
 				<p:menuitem value="Ajouter Client" action="ajoutClient"
 					icon="fa fa-user-plus fa-fw" />
-				<p:menuitem value="Suprimer Client" action="deleteClient"
-					icon="fa fa-user-times fa-fw" />
-				<p:menuitem value="Modifier Client" action="updateClient"
-					icon="fa fa-user-plus fa-fw" />
+
 
 			</p:submenu>
 
 			<p:separator />
-			<p:submenu label="Service Bancaire">
+			<p:submenu label="Comptes">
 
-				<p:menuitem value="Afficher Comptes Bancaires" action="listAccount"
+				<p:menuitem value="Liste Comptes" action="listAccount"
 					icon="fa fa-money fa-fw" />
-				<p:menuitem value="Suprimer Compte" action="deleteAccount"
-					icon="fa fa-user-times fa-fw" />
 				<p:menuitem value="Ajouter compte" action="addAccount"
 					icon="fa fa-user-plus fa-fw" />
-				<p:menuitem value="Virement compte à compte" action="bankTransfer"
+				<p:menuitem value="Virement" action="bankTransfer"
 					icon="fa fa-credit-card fa-fw" />
-				<p:menuitem value="Audit" icon="fa fa-calculator fa-fw" />
 
 			</p:submenu>
-
-
+			<p:submenu label="Audit">
+			</p:submenu>
+			
+			<p:submenu label="Se déconnecter">
+			</p:submenu>
 		</p:panelMenu>
 	</h:form>
 	<p:sticky target="menu" />
