--- a/src/main/webapp/template/nav.xhtml
+++ b/src/main/webapp/template/nav.xhtml
@@ -13,7 +13,7 @@
 		<p:growl autoUpdate="true" />
 
 		<p:panelMenu>
-			<p:submenu label="Client">
+			<p:submenu expanded="true" label="Client">
 				<p:menuitem value="Liste Clients" action="listClients"
 					icon="fa fa-group fa-fw" />
 				<p:menuitem value="Ajouter Client" action="ajoutClient"
@@ -23,7 +23,7 @@
 			</p:submenu>
 
 			<p:separator />
-			<p:submenu label="Comptes">
+			<p:submenu expanded="true" label="Comptes">
 
 				<p:menuitem value="Liste Comptes" action="listAccount"
 					icon="fa fa-money fa-fw" />
@@ -35,7 +35,7 @@
 			</p:submenu>
 			<p:submenu label="Audit">
 			</p:submenu>
-			
+
 			<p:submenu label="Se déconnecter">
 			</p:submenu>
 		</p:panelMenu>
