--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,30 +1,28 @@
 @CHARSET "ISO-8859-1";
 
- body {
-    overflow-x: hidden;
-    text-align: center;
- }
- 
- 
- #wrapper {
- margin:0 auto;
- height: 100%;
- }
+body {
+	overflow-x: hidden;
+	text-align: center;
+}
+
+#wrapper {
+	margin: 0 auto;
+	height: 100%;
+}
+
 #sidebar-wrapper {
-	
 	overflow: hidden;
 	background-color: #2e353d;
-/* 	position: absolute; */
+	/* 	position: absolute; */
 	top: 0px;
 	z-index: 1;
 	height: 100%;
 	color: #e1ffff
 }
 
-#right-wrapper{
+#right-wrapper {
 	height: 100%;
-/* 	 	position: fixed;  */
-	
+	/* 	 	position: fixed;  */
 }
 
 #footer {
@@ -42,11 +40,13 @@
 #header {
 	font-variant: small-caps;
 	text-align: center;
-	
+}
+
+.content-wrapper {
+	margin: 0 auto;
 }
 
 #wrapper-content-header {
-	
 	
 }
 
