--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -55,7 +55,7 @@
 							<div class="container-fluid content"  id ="content" style="min-height: 800px">
 
 								<ui:insert name="content" >
-									<ui:include src="/template/content.xhtml" />
+<!-- 									<ui:include src="/template/content.xhtml" /> -->
 								</ui:insert>
 
 							</div>
