--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -52,7 +52,7 @@
 						</div>
 
 						<div class="ui-g-12 ui-g-nopad">
-							<div class="container-fluid content" id="content"  style="min-height: 800px">
+							<div class="container-fluid" id="content"  style="min-height: 800px">
 
 								<ui:insert name="content" >
 									<ui:include src="/template/content.xhtml" />
