--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -37,7 +37,7 @@
 .addAccount{
 	margin: 0 auto 0 auto ! important;
 /* 	height: 75%; */
-	padding-top: 50px ! important;
+	padding: 100px ! important;
 /* 	position: center; */
 /* 	padding: 50px; */
 /* 	width: 75% !important; */
