--- a/src/main/webapp/template/footer.xhtml
+++ b/src/main/webapp/template/footer.xhtml
@@ -7,13 +7,14 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<!-- 	<p:growl id="msgs" showDetail="true" /> -->
+	<h:head>
+		<h:outputStylesheet library="css" name="/styleFooter.css" />
+	</h:head>
 
-
-	
-
-		<h:outputText class="text" value="&copy; 2016 ProxiBanque. Kat, Clement et Pierre"/>
-
-	
+	<div class="footer">
+		<h:outputText class="text"
+			value="&copy; 2016 ProxiBanque. Kat, Clement et Pierre" />
+	</div>
 
 
 
