--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -7,18 +7,15 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<!-- 	<p:growl id="msgs" showDetail="true" /> -->
-	<!-- <h:head> -->
-	<!-- 	<h:outputStylesheet library="css" name="/style.css" /> -->
-	<!-- </h:head> -->
+	<h:head>
+		<h:outputStylesheet library="css" name="/styleHeader.css" />
+	</h:head>
 
 	<div class="header">
 
-		<h:outputText class="header" value="ProxiBanque V3" />
+		<h1>ProxiBanque KPC</h1>
 
-		<h:outputText value="une banque proche de vous" />
-
-
-
-
+		<h:outputText id="text" value="Une banque proche de vous" />
+		
 	</div>
 </ui:composition>
