--- a/src/main/webapp/template/nav.xhtml
+++ b/src/main/webapp/template/nav.xhtml
@@ -7,7 +7,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<!-- 	<p:growl id="msgs" showDetail="true" /> -->
-
+<!-- 	<p:graphicImage id="logo" value="resources/images/Logomakr_3ZX3Hj.png" height="80px" width="100%" /> -->
+<!-- 	<p:resizable for="logo" animate="true" ghost="true"></p:resizable> -->
 
 	<h:form id="menu">
 		<p:growl autoUpdate="true" />
