--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -7,9 +7,9 @@
 	xmlns:p="http://primefaces.org/ui">
 
 	<!-- 	<p:growl id="msgs" showDetail="true" /> -->
-	<h:head>
-		<h:outputStylesheet library="css" name="/styleHeader.css" />
-	</h:head>
+<!-- 	<h:head> -->
+<!-- 		<h:outputStylesheet library="css" name="/styleHeader.css" /> -->
+<!-- 	</h:head> -->
 
 	<div class="header">
 
