--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -60,7 +60,7 @@
 								style="min-height: 800px">
 
 								<ui:insert name="content">
-									<ui:include src="/template/content.xhtml" />
+<!-- 									<ui:include src="/template/content.xhtml" /> -->
 								</ui:insert>
 
 							</div>
