--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,68 +1,34 @@
 @CHARSET "ISO-8859-1";
 
+body {
+	overflow-x: shidden;
+}
 
- body {
-    overflow-x: hidden;
- }
- 
- 
- #wrapper {
- margin:0 auto;
- height: 100%;
- }
-
+#wrapper {
+	margin: 0 auto;
+	height: 100%;
+	background-color: #2e353d;
+}
 
 #sidebar-wrapper {
 	overflow: hidden;
 	background-color: #2e353d;
-	/* 	position: absolute; */
+	/* 	position: fixed; */
 	top: 0px;
 	z-index: 1;
 	height: 100%;
-	color: #e1ffff
+	color: #e1ffff;
+	border-radius: 5px;
 }
-
-
-
 
 #right-wrapper {
 	height: 100%;
-	/* 	 	position: fixed;  */
+	/* 	position: fixed; */
+	/* 	margin-left: 500px; */
 }
-
-
-.addAccount{
-/* 	margin: 0 auto ! important; */
-	padding: 100px ! important;
-	float: left;
-	margin: 20% 30%;
-	border: 3px solid red;
-}
-
-.formulaire{
-	border: 2px solid blue;
-}
-
-
 
 #content {
-	
 	background-color: grey;
-	
+	border-radius: 5px;
+	padding-top: 20px;
 }
-
-#header {
-	font-variant: small-caps;
-	text-align: center;
-}
-
-
-
-#wrapper-content-header {
-	
-}
-
-/* .remove-all-margin-padding { */
-/* 	margin: 0 ! important; */
-/* 	padding: 0 ! important; */
-/* } */
