--- a/src/main/webapp/template/nav.xhtml
+++ b/src/main/webapp/template/nav.xhtml
@@ -10,6 +10,12 @@
 	<!-- 	<p:graphicImage id="logo" value="resources/images/Logomakr_3ZX3Hj.png" height="80px" width="100%" /> -->
 	<!-- 	<p:resizable for="logo" animate="true" ghost="true"></p:resizable> -->
 
+<!-- role management -->
+<!-- https://cagataycivici.wordpress.com/2010/03/18/primefaces-el-extensions-for-ui-authorization/ -->
+<!-- http://forum.primefaces.org/viewtopic.php?f=3&t=7755 -->
+
+
+
 	<h:form id="menu">
 		<p:growl autoUpdate="true" />
 
