liaison client compte

--- a/src/main/webapp/resources/css/styleContent.css
+++ b/src/main/webapp/resources/css/styleContent.css
@@ -19,7 +19,6 @@
 	width: 300px;
 	border-radius: 5px;
 }
-<<<<<<< HEAD
 
 label {
 	margin-top: 10px;
@@ -32,5 +31,7 @@ label {
 	text-decoration: underline;
 }
 
-=======
->>>>>>> origin/master
+.choixClient {
+	
+}
+
