--- a/src/main/webapp/template/nav.xhtml
+++ b/src/main/webapp/template/nav.xhtml
@@ -60,7 +60,7 @@
 
 			<p:submenu expanded="true" label="Déconnexion">
 				<p:menuitem value="Se déconnecter"
-					action="#{logoutController.logout}" icon="fa fa-sign-out fa-fw" />
+					action="#{logoutController.logout}" icon="fa fa-sign-out fa-fw" ajax="false"/>
 			</p:submenu>
 
 
