--- a/src/main/webapp/resources/css/styleContent.css
+++ b/src/main/webapp/resources/css/styleContent.css
@@ -3,21 +3,35 @@
 .addAccount {
 	margin-left: 40%;
 	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .addClient, .addCounsellor {
 	margin-left: 40%;
 	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 #fieldset {
 	margin-top: 20px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	padding: 15px;
-	padding-top:0px;
+	padding-top: 0px;
 	background-color: #c0c0c0;
 	width: 300px;
 	border-radius: 5px;
+	/* 	margin: auto; */
+}
+
+#field {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding: 15px;
+	padding-top: 0px;
+	background-color: #c0c0c0;
+	width: 500px;
+	border-radius: 5px;
+	/* 	margin: auto; */
 }
 
 label {
@@ -33,5 +47,9 @@ label {
 
 .choixClient {
 	
+}
+
+.container {
+	color: white;
 }
 
